--- a/CoreMVC5_UsedBookProject/Views/Shared/_LayoutSeller.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Shared/_LayoutSeller.cshtml
@@ -1,4 +1,9 @@
-﻿<!DOCTYPE html>
+﻿@{
+    var route = ViewContext.RouteData;
+    string controller = route.Values["controller"] != null ? route.Values["controller"].ToString() : "";
+    string action = route.Values["action"] != null ? route.Values["action"].ToString() : "";
+}
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -9,6 +14,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap-icons/font/bootstrap-icons.css">
     <link href="~/css/seller/topbtn.css" rel="stylesheet" />
     <link href="~/css/seller/modifiedpage.css" rel="stylesheet" />
+    <link href="~/css/seller/aside.css" rel="stylesheet" />
     @RenderSection("topCSS",required:false)
     @RenderSection("topJS", required: false)
 </head>
@@ -25,18 +31,11 @@
             }
         </style>
     </noscript>
-    
-    <div class="d-flex" style="position: relative;">
-        @if (User.Identity.IsAuthenticated && User.IsInRole("Seller"))
-        {
-            <div class="px-3" id="drop-login-status" style="max-height: 0px; height: fit-content; position: absolute; top: 0px; right: 0px; overflow: hidden; background-color: white; z-index: 1; transition: .5s; border-left: 1px solid black;">
-                <p class="px-1 mb-0 py-3" id="nickname" style="border-bottom: 1px solid black; font-size: 20px;">@User.Claims.FirstOrDefault(c => c.Type.Contains("email")).Value</p>
-                <a href="@Url.Action("Details", "Account")" class="px-1 text-dark me-2 d-block py-3" style="border-bottom: 1px solid black; font-size: 20px;"><i class="bi bi-gear"></i> 設定</a>
-                <a href="@Url.Action("SignOut", "Account")" class="px-1 text-dark d-block py-3" style="font-size: 20px;"><i class="bi bi-box-arrow-right"></i> 登出</a>
-            </div>
-        }
-        <partial name="_SellerAsidePartial"></partial>
-        <main role="main" class="p-2 container flex-grow-1">
+    <div class="d-flex">
+        <div id="aside_main">
+            <partial name="_SellerAsidePartial"></partial>
+        </div>
+        <main class="flex-grow-1 p-3" role="main">
             @RenderBody()
         </main>
     </div>
@@ -55,5 +54,9 @@
     <script src="~/js/seller/topbtn.js"></script>
     <script src="~/js/seller/shownickname.js"></script>
     <script src="~/js/seller/focus.js"></script>
+    @if (controller == "Seller" || (controller == "Account" && (action == "Details" || action == "ChangePassword" || action == "ChangeUserInfo" || action == "ForgotPasswordUserName" || action == "ForgotPassword")))
+    {
+        <script src="~/js/seller/aside.js"></script>
+    }
 </body>
 </html>
