--- a/CoreMVC5_UsedBookProject/Views/Account/ForgotPassword.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Account/ForgotPassword.cshtml
@@ -3,13 +3,12 @@
 @{
     ViewData["Title"] = "Register";
 }
-
-<div class="container-fluid">
-    <h1>註冊</h1>
+<div class="container-fluid pb-5">
+    <h1>忘記密碼</h1>
     <hr />
     <div class="row">
         <div class="col-md-4">
-            <form asp-action="Register">
+            <form asp-action="ForgotPassword">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-group">
                     <label asp-for="UserName" class="control-label"></label>
@@ -28,7 +27,7 @@
                     <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <input type="submit" value="註冊" class="btn btn-primary" />
+                    <input type="submit" value="變更" class="btn btn-primary" />
                 </div>
             </form>
         </div>
@@ -38,6 +37,7 @@
         <a asp-action="Index" asp-controller="Home">回首頁</a>
     </div>
 </div>
+
 
 @section endJS
 {
