--- a/CoreMVC5_UsedBookProject/Views/Seller/MySales.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Seller/MySales.cshtml
@@ -32,8 +32,8 @@
         @foreach (var item in Model.Orders)
         {
             <div class="p-2 d-flex flex-column flex-md-row align-items-center product-card my-1 gap-5px">
-                <div class="m-auto" style="width: 100%; aspect-ratio: 1 / 1; background-color: white; max-width: 200px;">
-                    <img src="../Images/@item.ProductId/@item.Image1" class="m-auto d-block reload-by-datetime" onload="imgMaxAuto(this)" alt="@item.Title" />
+                <div class="m-auto d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; background-color: white; max-width: 200px;">
+                    <img src="../Images/@item.ProductId/@item.Image1" class="m-auto" alt="@item.Title" />
                 </div>
                 <table class="container-fluid">
                     <tr><td>@Html.DisplayNameFor(model => model.Order.SellerId)</td><td>@item.SellerId</td></tr>
@@ -65,9 +65,6 @@
 </div>
 @section topCSS{
     <link href="~/css/seller/mysales.css" rel="stylesheet" />
-}
-@section topJS{
-    <script src="~/js/seller/imgmaauto.js"></script>
 }
 @section endJS{
     <script src="~/js/seller/reloadbydatetime.js"></script>
