--- a/CoreMVC5_UsedBookProject/Views/Shared/_Layout.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Shared/_Layout.cshtml
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
     <link href="~/css/buttons.css" rel="stylesheet" />
+    @RenderSection("topCSS",required:false)
+    @RenderSection("topJS", required: false)
 </head>
 <body>
     <header>
@@ -49,27 +51,13 @@
                 <partial name="_AdminLoginStatusPartial" />
             </div>
         </div>
-
-
-        
-
-
-
-
-
-
-
-
-
-
-
-
-
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="~/js/buttons.js"></script>
+    @RenderSection("endCSS", required: false)
+    @RenderSection("endJS", required: false)
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
