--- a/CoreMVC5_UsedBookProject/Views/Shared/_LoginStatusPartial.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Shared/_LoginStatusPartial.cshtml
@@ -1,15 +1,35 @@
 ﻿@if (User.Identity.IsAuthenticated)
 {
-    @*已登入*@
-    //顯示使用者名稱+登出按鈕
-    <a class="text-dark d-inline-block p-1" id="drop-login-btn" style="font-size: 20px; width: fit-content; overflow: hidden;">
-        <i class="bi bi-file-person-fill"></i> 個人資訊
-    </a>
+    @if (User.IsInRole("Seller"))
+    {
+        @*已登入*@
+        //顯示使用者名稱+登出按鈕
+        <div class="d-block">
+            <div id="hamber">
+                <a class="btn no-hide" id="login-btn" href="#">
+                    <i class="bi bi-file-person-fill"></i> 個人資訊
+                </a>
+            </div>
+            <div style="position: relative;">
+                <div class="login-menu">
+                    <div id="login-status">
+                        <p class="mb-0 p-3 text-center account-p no-hide" id="nickname">@User.Claims.FirstOrDefault(c => c.Type.Contains("email")).Value</p>
+                        <a href="@Url.Action("Details", "Account")" class="d-block p-3 account-a text-decoration-none"><i class="bi bi-gear"></i> 設定</a>
+                        <a href="@Url.Action("SignOut", "Account")" class="d-block p-3 account-a text-decoration-none"><i class="bi bi-box-arrow-right"></i> 登出</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    }
+    else
+    {
+        <a href="@Url.Action("SignOut", "Account")" class="p-1 account-a text-decoration-none"><i class="bi bi-box-arrow-right"></i> 登出</a>
+    }
 }
 else
 {
     @*未登入*@
     //登入按鈕+註冊
-    <a href="@Url.Action("Login", "Account")" class="p-1 text-dark me-2" style="font-size: 20px;">登入</a>
-    <a href="@Url.Action("Register", "Account")" class="p-1 text-dark" style="font-size: 20px;">註冊</a>
+    <a href="@Url.Action("Login", "Account")" class="p-1 account-a text-decoration-none">登入</a>
+    <a href="@Url.Action("RegisterUserName", "Account")" class="p-1 account-a text-decoration-none">註冊</a>
 }
