--- a/CoreMVC5_UsedBookProject/Views/Shared/_NavbarPartial.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Shared/_NavbarPartial.cshtml
@@ -6,14 +6,23 @@
     string controller = route.Values["controller"] != null ? route.Values["controller"].ToString() : "";
     string action = route.Values["action"] != null ? route.Values["action"].ToString() : "";
 }
-<nav class="bg-white border-bottom box-shadow d-flex p-3" style="position: relative;">
-    @if (controller == "Seller" || (controller == "Account" && (action == "Details" || action == "ChangePassword" || action == "ChangeUserInfo")))
+<nav class="bg-white border-bottom box-shadow d-flex" id="navbar">
+    @if (controller == "Seller" || (controller == "Account" && (action == "Details" || action == "ChangePassword" || action == "ChangeUserInfo" || action == "ForgotPasswordUserName" || action == "ForgotPassword")))
     {
-        <i class="bi bi-list mr-2" id="hamber" style="font-size: 26px;"></i>
+        <div class="d-block">
+            <div class="no-hide" id="hamber">
+                <a class="btn no-hide" id="hamber-a" href="#">
+                    <i class="bi bi-list no-hide" id="hamber-i" style="font-size: 26px; color: black;"></i>
+                </a>
+            </div>
+            <div style="position: relative;">
+                <div class="aside-menu">
+                    <partial name="_SellerAsidePartial"></partial>
+                </div>
+            </div>
+        </div>
     }
-    <a class="text-dark d-block text-decoration-none p-1" asp-area="" asp-controller="Seller" asp-action="Index" style="font-size: 20px;"><strong>二手書平台-賣家中心</strong></a>
+    <div class="d-flex align-items-center px-2"><a class="text-dark d-block text-decoration-none p-1" asp-area="" asp-controller="Seller" asp-action="Index" style="font-size: 20px;"><strong>二手書平台-賣家中心</strong></a></div>
     <p class="flex-grow-1"></p>
-    <div>
-        <partial name="_LoginStatusPartial" />
-    </div>
+    <partial name="_LoginStatusPartial" />
 </nav>
