--- a/CoreMVC5_UsedBookProject/Views/Shared/_SellerAsidePartial.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Shared/_SellerAsidePartial.cshtml
@@ -8,52 +8,54 @@
 }
 @if (controller == "Seller")
 {
-    <link href="~/css/seller/aside.css" rel="stylesheet" />
-    <ul class="pl-0" id="menu" style="border-right: 1px solid black; border-bottom: 1px solid black; height: 100%;">
-        <li class="list-unstyled py-3" style=" background-color: #80808050;">
-            <p class="text-dark text-center mb-0" style="font-size: 18px;"><strong>訂單管理</strong></p>
+    <ul class="pl-0" id="menu">
+        <li class="list-unstyled aside-text">
+            <p class="text-center py-3 mb-0 no-hide"><strong class="no-hide">訂單管理</strong></p>
         </li>
-        <li class="list-unstyled py-3">
-            <a class="text-dark text-center d-block mb-0 text-decoration-none" style="font-size: 18px;" href="@Url.Action("Index", "Seller", new {})">待辦事項清單</a>
+        <li class="list-unstyled aside-link">
+            <a class="text-center py-3 d-block mb-0 text-decoration-none" href="@Url.Action("Index", "Seller", new {})">待辦事項清單</a>
         </li>
-        <li class="list-unstyled py-3">
-            <a class="text-dark text-center d-block mb-0 text-decoration-none" style="font-size: 18px;" href="@Url.Action("MySales", "Seller", new {trade = "金錢"})">我的銷售(金錢)</a>
+        <li class="list-unstyled aside-link">
+            <a class="text-center py-3 d-block mb-0 text-decoration-none" href="@Url.Action("MySales", "Seller", new {trade = "金錢"})">我的銷售(金錢)</a>
         </li>
-        <li class="list-unstyled py-3">
-            <a class="text-dark text-center d-block mb-0 text-decoration-none" style="font-size: 18px;" href="@Url.Action("MySales", "Seller", new {trade = "以物易物"})">我的銷售(以物易物)</a>
+        <li class="list-unstyled aside-link">
+            <a class="text-center py-3 d-block mb-0 text-decoration-none" href="@Url.Action("MySales", "Seller", new {trade = "以物易物"})">我的銷售(以物易物)</a>
         </li>
-        <li class="list-unstyled py-3" style=" background-color: #80808050;">
-            <p class="text-dark text-center mb-0" style="font-size: 18px;"><strong>商品管理</strong></p>
+        <li class="list-unstyled aside-text">
+            <p class="text-center py-3 mb-0 no-hide"><strong class="no-hide">商品管理</strong></p>
         </li>
-        <li class="list-unstyled py-3">
-            <a class="text-dark text-center d-block mb-0 text-decoration-none" style="font-size: 18px;" href="@Url.Action("MyProducts", "Seller", new {trade = "金錢"})">我的商品(金錢)</a>
+        <li class="list-unstyled aside-link">
+            <a class="text-center py-3 d-block mb-0 text-decoration-none" href="@Url.Action("MyProducts", "Seller", new {trade = "金錢"})">我的商品(金錢)</a>
         </li>
-        <li class="list-unstyled py-3">
-            <a class="text-dark text-center d-block mb-0 text-decoration-none" style="font-size: 18px;" href="@Url.Action("MyProducts", "Seller", new {trade = "以物易物"})">我的商品(以物易物)</a>
+        <li class="list-unstyled aside-link">
+            <a class="text-center py-3 d-block mb-0 text-decoration-none" href="@Url.Action("MyProducts", "Seller", new {trade = "以物易物"})">我的商品(以物易物)</a>
         </li>
-        <li class="list-unstyled py-3">
-            <a class="text-dark text-center d-block mb-0 text-decoration-none" style="font-size: 18px;" href="@Url.Action("Create", "Seller", new {})">新增商品</a>
+        <li class="list-unstyled aside-link">
+            <a class="text-center py-3 d-block mb-0 text-decoration-none" href="@Url.Action("Create", "Seller", new {})">新增商品</a>
         </li>
     </ul>
-    <script src="~/js/seller/aside.js"></script>
 }
-else if (controller == "Account" && (action == "Details" || action == "ChangePassword" || action == "ChangeUserInfo"))
+else if (controller == "Account" && (action == "Details" || action == "ChangePassword" || action == "ChangeUserInfo" || action == "ForgotPasswordUserName" || action == "ForgotPassword"))
 {
-    <link href="~/css/seller/aside.css" rel="stylesheet" />
-    <ul class="pl-0" id="menu" style="border-right: 1px solid black; border-bottom: 1px solid black; height: 100%;">
-        <li class="list-unstyled py-3" style=" background-color: #80808050;">
-            <p class="text-dark text-center mb-0" style="font-size: 18px;"><strong>個人管理</strong></p>
+    <ul class="pl-0" id="menu">
+        <li class="list-unstyled aside-text">
+            <p class="text-center py-3 mb-0 no-hide"><strong class="no-hide">個人管理</strong></p>
         </li>
-        <li class="list-unstyled py-3">
-            <a class="text-dark text-center d-block mb-0 text-decoration-none" style="font-size: 18px;" href="@Url.Action("Details", "Account", new {})">我的資訊</a>
+        <li class="list-unstyled aside-link">
+            <a class="text-center py-3 d-block mb-0 text-decoration-none" href="@Url.Action("Details", "Account", new {})">我的資訊</a>
         </li>
-        <li class="list-unstyled py-3">
-            <a class="text-dark text-center d-block mb-0 text-decoration-none" style="font-size: 18px;" href="@Url.Action("ChangeUserInfo", "Account", new {})">變更資訊</a>
+        <li class="list-unstyled aside-link">
+            <a class="text-center py-3 d-block mb-0 text-decoration-none" href="@Url.Action("ChangeUserInfo", "Account", new {})">變更資訊</a>
         </li>
-        <li class="list-unstyled py-3">
-            <a class="text-dark text-center d-block mb-0 text-decoration-none" style="font-size: 18px;" href="@Url.Action("ChangePassword", "Account", new {})">變更密碼</a>
+        <li class="list-unstyled aside-link">
+            <a class="text-center py-3 d-block mb-0 text-decoration-none" href="@Url.Action("ChangePassword", "Account", new {})">變更密碼</a>
         </li>
+        @if (User.IsInRole("Administrator"))
+        {
+            <li class="list-unstyled aside-link">
+                <a class="text-center py-3 d-block mb-0 text-decoration-none" href="@Url.Action("ForgotPasswordUserName", "Account", new {})">忘記密碼</a>
+            </li>
+        }
     </ul>
-    <script src="~/js/seller/aside.js"></script>
 }
 
