--- a/CoreMVC5_UsedBookProject/wwwroot/css/Seller/topbtn.css
+++ b/CoreMVC5_UsedBookProject/wwwroot/css/Seller/topbtn.css
@@ -17,3 +17,9 @@
 #topBtn:hover {
     background-color: #555; /* Add a dark-grey background on hover */
 }
+
+#navbar {
+    width: 100%;
+    background-color: white;
+    z-index: 1;
+}
