--- a/CoreMVC5_UsedBookProject/Views/Shared/_Layout.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
+                    <ul class="navbar-nav d-flex flex-row flex-grow-1">
                         <li class="nav-item">
                             <a class="nav-link text-dark button-cover-nav" asp-area="" asp-controller="Home" asp-action="Index">主頁面</a>
                         </li>
