--- a/CoreMVC5_UsedBookProject/Views/Shared/_SellerAsidePartial.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Shared/_SellerAsidePartial.cshtml
@@ -10,6 +10,15 @@
 {
     <ul class="pl-0" id="menu">
         <li class="list-unstyled aside-text">
+            <p class="text-center py-3 mb-0 no-hide"><strong class="no-hide">賣家中心</strong></p>
+        </li>
+        <li class="list-unstyled aside-link">
+            <a class="text-center py-3 d-block mb-0 text-decoration-none" href="@Url.Action("Index", "Seller", new {})">賣家中心</a>
+        </li>
+        <li class="list-unstyled aside-link">
+            <a class="text-center py-3 d-block mb-0 text-decoration-none" href="@Url.Action("Index", "Home", new {})">回首頁</a>
+        </li>
+        <li class="list-unstyled aside-text">
             <p class="text-center py-3 mb-0 no-hide"><strong class="no-hide">訂單管理</strong></p>
         </li>
         <li class="list-unstyled aside-link">
