--- a/CoreMVC5_UsedBookProject/wwwroot/css/buttons.css
+++ b/CoreMVC5_UsedBookProject/wwwroot/css/buttons.css
@@ -216,3 +216,12 @@
     display:flex;
     padding-right:0.3%;
 }
+.error-message {
+    color: red;
+    border: 1px solid red;
+    width:130px;
+    border-radius:5rem;
+    text-align:center;
+    cursor:default;
+    margin:5px 0px;
+}
