--- a/CoreMVC5_UsedBookProject/Views/Shared/_LayoutSeller.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Shared/_LayoutSeller.cshtml
@@ -54,7 +54,7 @@
     <script src="~/js/seller/topbtn.js"></script>
     <script src="~/js/seller/shownickname.js"></script>
     <script src="~/js/seller/focus.js"></script>
-    @if (controller == "Seller" || (controller == "Account" && (action == "Details" || action == "ChangePassword" || action == "ChangeUserInfo" || action == "ForgotPasswordUserName" || action == "ForgotPassword")))
+    @if (controller == "Seller" || (controller == "SellerAccount" && (action == "Details" || action == "ChangePassword" || action == "ChangeUserInfo" || action == "ForgotPasswordUserName" || action == "ForgotPassword")))
     {
         <script src="~/js/seller/aside.js"></script>
     }
