--- a/CoreMVC5_UsedBookProject/Views/Shared/_NavbarPartial.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Shared/_NavbarPartial.cshtml
@@ -7,7 +7,7 @@
     string action = route.Values["action"] != null ? route.Values["action"].ToString() : "";
 }
 <nav class="bg-white border-bottom box-shadow d-flex" id="navbar">
-    @if (controller == "Seller" || (controller == "Account" && (action == "Details" || action == "ChangePassword" || action == "ChangeUserInfo" || action == "ForgotPasswordUserName" || action == "ForgotPassword")))
+    @if (controller == "Seller" || (controller == "SellerAccount" && (action == "Details" || action == "ChangePassword" || action == "ChangeUserInfo" || action == "ForgotPasswordUserName" || action == "ForgotPassword")))
     {
         <div class="d-block">
             <div class="no-hide" id="hamber">
