--- a/CoreMVC5_UsedBookProject/Views/Shared/_LayoutAdminLogin.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Shared/_LayoutAdminLogin.cshtml
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
     <link href="~/css/buttons.css" rel="stylesheet" />
+    <link href="~/css/fixbgc.css" rel="stylesheet" />
 </head>
 <body>
     <header>
@@ -20,7 +21,7 @@
             </div>
         </nav>
     </header>
-    <div class="container">
+    <div class="imgbackground">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
