--- a/CoreMVC5_UsedBookProject/Views/Home/Index.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Home/Index.cshtml
@@ -1,40 +1,36 @@
-﻿@using CoreMVC5_UsedBookProject.ViewModel;
+﻿﻿@using CoreMVC5_UsedBookProject.ViewModel;
 @model MyProductsViewModel
 @{
     ViewData["Title"] = "Home Page";
 }
-
-<div class="text-center">
-   
-    @if (Model.Products.Count > 0)
-    {
-        @foreach (var item in Model.Products)
-        {
-            <div class="card" style="width: 18rem;">
-                <div class="card-body">
-                    <h5 class="card-title">@item.Title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                </div>
-                <div class="m-auto d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; background-color: white; max-width: 200px;">
-                    <img src="../Images/@item.ProductId/@item.Image1" class="m-auto w-100" alt="@item.Title" />
-                </div>
-                <table class="container-fluid">
-
-                    <tr><td>@Html.DisplayNameFor(model => model.Product.Title)</td><td>@item.Title</td></tr>
-                    <tr><td>@Html.DisplayNameFor(model => model.Product.ISBN)</td><td>@item.ISBN</td></tr>
-                    <tr><td>@Html.DisplayNameFor(model => model.Product.Author)</td><td>@item.Author</td></tr>
-                    <tr><td>@Html.DisplayNameFor(model => model.Product.UnitPrice)</td><td>以物易物</td></tr>
-
-                </table>
-                <div class="card-body " >
-                    <a href="#" class="card-link">購買</a>
-                    <a href="#" class="card-link">交換</a>
-                </div>
-            </div>
-        }
-
+<style>
+    .carousel-item img {
+        object-fit: cover;
+        width: 100%;
+        height: 600px; /* 設定圖片的高度，可以根據需求自行調整 */
     }
+</style>
 
+<div id="carouselExample" class="carousel slide" data-ride="carousel">
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img src="~/adminimg/柴犬.jpg" class="d-block w-100" alt="Slide 1">
+        </div>
+        <div class="carousel-item">
+            <img src="~/adminimg/黃金獵犬.jpg" class="d-block w-100" alt="Slide 2">
+        </div>
+        <div class="carousel-item">
+            <img src="~/adminimg/邊境牧羊犬.jpg" class="d-block w-100" alt="Slide 3">
+        </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExample" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExample" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
 </div>
 @section topCSS{
     <link href="~/css/seller/myproducts.css" rel="stylesheet" />
