--- a/CoreMVC5_UsedBookProject/Views/Shared/_Layout.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Shared/_Layout.cshtml
@@ -27,8 +27,8 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark button-cover-nav" asp-area="" asp-controller="Home" asp-action="Privacy">隱私中心</a>
                         </li>
-                        
-                            <form class="form-inline my-2 my-lg-0" action="~/Home/Index" method="post">
+
+                        <form class="form-inline my-2 my-lg-0" action="~/Home/SearchProductbyName" method="post">
                                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="name">
                                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
                             </form>
