--- a/CoreMVC5_UsedBookProject/Views/AdministratorLogin/Login.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/AdministratorLogin/Login.cshtml
@@ -21,8 +21,8 @@
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
             <hr>
-            <div class="form-group"> 
-                <input type="submit" value="登入" class="btn btn-primary btn-login-view" />
+            <div class="form-group">
+            <input type="submit" value="登入" class="btn btn-primary btn-login-view btn-login" />
             </div>
         </form>
         @if (!string.IsNullOrEmpty(ViewBag.ErrorMessage))
