--- a/CoreMVC5_UsedBookProject/Views/Shared/_AdminLoginStatusPartial.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Shared/_AdminLoginStatusPartial.cshtml
@@ -14,6 +14,6 @@
     else
     {
         @*未登入*@
-        <li><a href="@Url.Action("Login", "AdministratorLogin")" class="btn btn-login">管理員登入</a></li>
+        <li><a href="@Url.Action("Login", "AdministratorLogin")" class="btn btn-hide">管理員登入</a></li>
     }
 </ul>
