--- a/CoreMVC5_UsedBookProject/wwwroot/css/buttons.css
+++ b/CoreMVC5_UsedBookProject/wwwroot/css/buttons.css
@@ -92,13 +92,6 @@
     background-color: blue;
     transition: background-color 0.3s, color 0.3s;
 }
-
-    .btn-login-view:hover {
-        border: 1px solid blue;
-        background-color: transparent;
-        color: blue;
-    }
-
 .btn-logout-view {
     color: white;
     background-color: red;
@@ -111,6 +104,31 @@
         color: red;
     }
 
+.btn-hide {
+    border-color: blue;
+    background-color: white;
+    color: blue;
+    opacity:0;
+    cursor:default;
+}
+    .btn-hide:hover {
+        border-color: blue;
+        background-color: white;
+        transition: background-color 1.5s, color 1.5s, border-color 1.5s;
+        color: blue;
+        opacity: 1;
+    }
+.btn-login {
+    color: white;
+    background-color: blue;
+    transition: background-color 0.3s, color 0.3s;
+}
+    .btn-login:hover {
+        border-color: blue;
+        background-color: white;
+        color: blue;
+        transition: background-color 1.5s, color 1.5s, border-color 1.5s;
+    }
 .login-info {
     display: flex;
     align-items: center;
@@ -124,19 +142,6 @@
     width: 5px;
 }
 
-.btn-login{
-    border-color: blue;
-    background-color: white;
-    color: blue;
-    transition: background-color 1.5s, color 1.5s, border-color 1.5s;
-    opacity: 0;
-}
-
-.btn-login:hover {
-    border-color: blue;
-    background-color: white;
-    color: blue;
-}
 .btn-logout {
     color: white;
     background-color: red;
@@ -184,7 +189,7 @@
         left: 0;
     }
 
-    .nav-item.hovered .btn-login,
+    .nav-item.hovered,
     .nav-item.hovered .btn-logout {
         opacity: 0;
     }
@@ -199,7 +204,7 @@
             transition-delay: 0s;
         }
 
-    .nav-item:hover .btn-login,
+    .nav-item:hover,
     .nav-item:hover .btn-logout {
         opacity: 1;
         transition-delay: 1.5s;
